modified:   UserGuide/TOPPE_UserGuide.pdf modified:   UserGuide/intro.tex modified:   UserGuide/main.out modified:   UserGuide/main.toc modified:   UserGuide/scanning.tex

--- a/UserGuide/intro.tex
+++ b/UserGuide/intro.tex
@@ -68,6 +68,11 @@ For long scans, {\tt scanloop.txt} can contain many tens of thousands of lines.
 
 %Figure~\ref{fig:overview} summarizes the ...
 
+\subsection{Legacy files }
+
+The files {\tt legacy1.rho}, {\tt legacy1.theta}, and {\tt legacy2.rho} must be copied to /usr/g/bin/ on the scanner.
+These files are included in the subfolders of {\tt matlab/seqlib/} in the TOPPE MATLAB repository, available at \url{https://github.com/toppeMRI/matlab/}.
+
 \mywrapfigure{overview}{R}{0.99}{
 Overview of pulse sequence programming with \toppe.
 The TOPPE sequence files (orange) specify all details of the MR acquisition, such as RF phase cycling, gradient waveforms, and timing information.
