--- a/UserGuide/scanning.tex
+++ b/UserGuide/scanning.tex
@@ -84,41 +84,30 @@ Prepare directory for compilation and compile:
 This will create two executables: {\tt \psdname} and {\tt \psdname.psd.o}.
 
 
-\section{Legacy files that must exist in \texttt{/usr/g/bin/} on scanner}
-
-The files {\tt legacy1.rho}, {\tt legacy1.theta}, and {\tt legacy2.rho} must be copied to /usr/g/bin/ on the scanner.
-These files are included in the subfolders of {\tt matlab/seqlib/} in the TOPPE MATLAB repository, available at \url{https://github.com/toppeMRI/toppe/}.
-
 
 
 \section{Step-by-step scanner instructions}
 
 Follow these steps to prescribe and run the toppe sequence:
 \begin{enumerate}
-	\item Copy {\tt \psdname} and {\tt \psdname.psd.o} to /usr/g/bin/ on the scanner host computer (console).
+	\item Copy {\tt \psdname} and {\tt \psdname.psd.o} to /usr/g/bin/ on the scanner host computer (console). This is only done once per scanner software upgrade.
 	\item Copy {\tt modules.txt}, {\tt scanloop.txt}, and all .mod files to /usr/g/bin/.
-	\item Make sure the following required files exist:
+	\item Required files:
 	\begin{itemize}
 		\item Make sure one of the readout (acquisition) .mod files is named {\tt readout.mod}.
-		\item Create a file {\tt rffiles.txt} in /usr/g/bin/, containing the name of one of the RF .mod files.
-		\item Copy \texttt{sech\_7360.rho}, \texttt{sech\_7360.theta}, and \texttt{myhanning.rho} from the \texttt{legacy} directory in this distribution to \texttt{/usr/g/bin/} on the scanner.
+		\item Make sure one of the RF excitation .mod files is named {\tt tipdown.mod}.
 	\end{itemize}
-	\item Run a localizer sequence, including auto-prescan.
 	\item Prescribe the toppe sequence:
 \begin{itemize}
 	\item Select Axial 2D pulse sequence; Family: 'Gradient Echo'; pulse: 'GRE'; PSD Name: '\psdname'; click 'Accept'. (Fig.~\ref{fig:Rx1})
-	\item Freq. FOV: 24 (Fig.~\ref{fig:Rx2})
 	\item Set slice thickness to the design value.
 	\item Set slice spacing to 0.
 	\item Set number of slices to {\tt rhnslices}$-1$ (see discussion of scanloop.txt above).
-	\item TE: 1.0   (doesn't matter)
-	\item Flip angle: 10  (doesn't matter)
+	\item Set shim of 'off'.
 \end{itemize}
 	\item Save and download the sequence, and run autoprescan.
-	\item If autoprescan fails, do a 'dummy' manual prescan: Enter into manual prescan (Fig.~\ref{fig:Rx3}), adjust receive gains if needed, and exit (this will avoid auto-prescan when clicking the 'scan' button).
 	\item Click scan button. This will create a Pfile in /usr/g/mrraw/.
-	\item If you see evidence of overranging in the reconstructed image you will need to reduce the receive gains (in manual prescan) and scan again.
-	\item To run a different scan with the same number of slices, simply overwrite modules.txt and scanloop.txt and make sure the .mod files for the next sequence exist in /usr/g/bin/. Then download the sequence (right-click) and hit Scan button. You do not need to prescribe a new sequence every time you load a new set of external files.
+	\item To run a different TOPPE scan, simply overwrite modules.txt and scanloop.txt and make sure the .mod files for the next sequence exist in /usr/g/bin/. Then download the sequence (right-click) and hit Scan button. You do not need to prescribe a new sequence every time you load a new set of external files.
 \end{enumerate}
 
 \mywrapfigure{Rx1}{R}{0.98}{
