new file:   UserGuide/.scanning.tex.swp new file:   UserGuide/.title.tex.swp modified:   UserGuide/README.md modified:   UserGuide/TOPPE_UserGuide.pdf modified:   UserGuide/main.out modified:   UserGuide/main.tex modified:   UserGuide/main.toc modified:   UserGuide/scanning.tex modified:   UserGuide/title.tex

--- a/UserGuide/main.tex
+++ b/UserGuide/main.tex
@@ -81,6 +81,8 @@
 \newcommand\toppeversion{1.0}
 \newcommand\toppe{{\tt toppev1.e}}
 \newcommand\psdname{toppev1}
+\newcommand\matrep{\url{https://github.com/toppeMRI/matlab/}}
+\newcommand\toppeweb{\url{https://toppemri.github.io/}}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
