--- a/UserGuide/title.tex
+++ b/UserGuide/title.tex
@@ -12,11 +12,15 @@
 ~\\[0.5in]
 {\bf \huge The TOPPE pulse programming environment} \\ [0.4in]
 {\bf \huge for GE MRI scanners} \\ [0.6in]
-{\tt This document applies to version~\toppeversion of the pulse sequence (\toppe).   } \\ [0.1in]
+{\tt This document applies to version~\toppeversion~of the pulse sequence (\toppe).   } \\ [0.1in]
 {\tt Tested on a GE Discovery MR750 scanner running software version DV25.1\_R01.   } \\ [0.6in]
 {\tt Version of this document:~\toppeversion-\today} \\ [1in]
 {\large Jon-Fredrik Nielsen, Ph.D.} \\ [0.1in]
-{\tt jfnielse@umich.edu} \\ [1.5in]
+{\tt jfnielse@umich.edu} \\ [1in]
+This pdf is available from the TOPPE website: \toppeweb. \\ [0.25in]
+This document is open-source. Latex code can be found in the UserGuide folder in the following repository: \url{https://github.com/toppeMRI/toppemri.github.io} \\
+Alternatively, you can get a copy of the repository by typing the following in a Linux console:\\
+{\tt git clone https://github.com/toppemri/toppemri.github.io}. \\ [0.1in]
 %fMRI Laboratory, University of Michigan \\
 % {\includegraphics[width=0.7\textwidth]{logo}}
 % \vfill
